--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Kdam Thmor Pro';
+}
+
 .bg-maroon {
   background-color: maroon;
 }
@@ -10,124 +14,3 @@
   width: 35px;
 }
 
-.content {
-  margin-top: 60px;
-  padding: 12px;
-  height: 3000px;
-}
-
-
-
-/* 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  
-}
-
-body {
-  font-family: sans-serif;
-}
-
-.nav-area {
-  display: flex;
-  align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 0px;
-  height: 48px; 
-  background-color: beige;
-  
-}
-
-.logo {
-  text-decoration: none;
-  font-size: 25px;
-  color: inherit;
-  margin-right: 20px;
-  
-}
-
-.menus {
-  display: flex;
-  list-style: none;
-}
-
-.menu-items {
-  position: relative;
-  font-size: 14px;
-  background-color: beige;
-}
-
-.menu-items a {
-  display: block;
-  font-size: inherit;
-  color: inherit;
-  text-decoration: none;
-  background-color: beige;
-
-}
-
-.menu-items button {
-  color: inherit;
-  font-size: inherit;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  width: 100%;
-
-}
-
-.menu-items a,
-.menu-items button {
-  text-align: left;
-  padding: 1rem 1.5rem;
-   padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem; 
-}
-
-.menu-items a:hover,
-.menu-items button:hover {
-  background-color: white;
-}
-
-.arrow::after {
-  content: "";
-  display: inline-block;
-  margin-left: 0.28em;
-  vertical-align: 0.09em;
-  border-top: 0.42em solid;
-  border-right: 0.32em solid transparent;
-  border-left: 0.32em solid transparent;
-  
-}
-
-.dropdown {
-  position: absolute;
-  right: 0;
-  left: 0;
-  box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08),
-    0 4px 6px -2px rgba(71, 63, 79, 0.16);
-  font-size: 0.875rem;
-  z-index: 9999;
-  min-width: 8rem;
-  list-style: none;
-  border-radius: 0.5rem;
-  display: none;
-  background-color: white;
-}
-
-.dropdown.show {
-  display: block;
-  
-}
-
-.dropdown .dropdown-submenu {
-  position: absolute;
-  left: 100%;
-  top: -7px;
-  margin-top: 5px;
-} */
