--- a/src/components/PlayerBios/PlayerBios.css
+++ b/src/components/PlayerBios/PlayerBios.css
@@ -1,3 +1,13 @@
 .PlayerBios {
-    margin-top: 70px;
+    margin-top: 80px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.title{
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+.bio-card{
+    margin-bottom: 30px;
 }
