--- a/src/components/Homebrewed/Races/HomebrewedRaces.css
+++ b/src/components/Homebrewed/Races/HomebrewedRaces.css
@@ -1,4 +1,4 @@
-.PlayerBios {
+.HomebrewedRaces {
     margin-top: 80px;
     margin-left: 20px;
     margin-right: 20px;
@@ -9,6 +9,6 @@
     margin-bottom: 15px;
 }
 
-.bio-card{
+.race-card{
     margin-bottom: 30px;
 }
