--- a/src/components/Homebrewed/Classes/HomebrewedClasses.css
+++ b/src/components/Homebrewed/Classes/HomebrewedClasses.css
@@ -12,8 +12,6 @@
 
 .class-card{
     margin-bottom: 30px;
-    /* text-decoration: none;
-    color: black; */
 }
 
 .Arsenalist {
@@ -23,9 +21,9 @@
 }
 
 .outer-box{
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-top: 100px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
 }
 
 .class-name{
@@ -36,10 +34,10 @@
 
 .box {
     padding-top: 1rem;
+    padding-bottom: 1rem;
     padding-left: 2rem;
     padding-right: 2rem;
     background-color: white;
-    height: 5000px;
     border-radius: 10px;
 }
 
@@ -48,4 +46,3 @@
     padding-right: 10px;
     padding-top: 20px;
 }
-
