--- a/src/components/SessionSummaries/SessionSummaries.css
+++ b/src/components/SessionSummaries/SessionSummaries.css
@@ -1,3 +1,8 @@
 .SessionSummaries {
-    margin-top: 70px;
+    margin-top: 80px;
+}
+
+.title{
+    margin-left: 15px;
+    margin-bottom: 15px;
 }
