--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,8 +1,6 @@
 .Home {
     margin-top: 70px;
 }
-
-.carousel-inner img {
-    display: flex;
-    margin: auto;
-  }
+.carousel-caption {
+    top: 15rem;
+}
