animated class, player profiles

--- a/src/components/PlayerBios/PlayerBios.css
+++ b/src/components/PlayerBios/PlayerBios.css
@@ -12,3 +12,21 @@
 .bio-card{
     margin-bottom: 30px;
 }
+
+.anna-pp{
+    height: 300px;
+    object-fit: cover;
+    object-position: 0px -40px;
+}
+
+.cal-pp{
+    height: 300px;
+    object-fit: cover;
+    object-position: top;
+}
+
+.sophie-pp{
+    height: 300px;
+    object-fit: cover;
+    object-position: top;
+}
