--- a/src/components/CharacterSheets/AelithCharacters/Aravala/Aravala.css
+++ b/src/components/CharacterSheets/AelithCharacters/Aravala/Aravala.css
@@ -1,18 +1,19 @@
-.title{
-    margin-left: 15px;
-    margin-bottom: 15px;
-}
-
 .Aravala{
     margin-top: 80px;
     margin-left: 20px;
     margin-right: 20px;
 }
 
+.title{
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+
 .outer-box{
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .class-name{
@@ -23,7 +24,7 @@
 
 .box {
     padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom: 5rem;
     padding-left: 2rem;
     padding-right: 2rem;
     background-color: white;
@@ -48,4 +49,5 @@
     border-radius: 10px;
     width: auto;
     height: 35rem;
+    object-fit: cover;
 }
