--- a/src/components/CharacterSheets/CharacterSheets.css
+++ b/src/components/CharacterSheets/CharacterSheets.css
@@ -1,8 +1,14 @@
 .CharacterSheets {
     margin-top: 80px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .title{
     margin-left: 15px;
     margin-bottom: 15px;
 }
+
+/* .bio-card{
+    margin-bottom: 30px;
+} */
