--- a/src/components/Homebrewed/Races/Races.css
+++ b/src/components/Homebrewed/Races/Races.css
@@ -9,6 +9,7 @@
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .race-name{
@@ -17,9 +18,9 @@
     text-decoration: underline;
 }
 
-.box {
+.race-box {
     padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom: 5rem;
     padding-left: 2rem;
     padding-right: 2rem;
     background-color: white;
