haze, malum, 1st lvl kaleido spells

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,35 @@
   width: 35px;
 }
 
+.title{
+  margin-left: 15px;
+  margin-bottom: 15px;
+}
+
+.outer-box{
+  /* margin-left: 1rem;
+  margin-right: 1rem; */
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.class-name{
+  padding-left: 10px;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.box {
+  padding-top: 1rem;
+  padding-bottom: 5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.content {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20px;
+}
