--- a/src/components/CharacterSheets/CharacterSheets.css
+++ b/src/components/CharacterSheets/CharacterSheets.css
@@ -9,6 +9,14 @@
     margin-bottom: 15px;
 }
 
-/* .bio-card{
-    margin-bottom: 30px;
-} */
+.character-sheet {
+    /* rem = n*16 px */
+    /* border: 1px solid rgba(85, 85, 85, 0.15); */
+    width: 50rem;
+    height: auto;
+}
+
+.character-art{
+    height: 30rem;
+    object-fit: contain;
+}
