--- a/src/App.css
+++ b/src/App.css
@@ -19,13 +19,6 @@
   margin-bottom: 15px;
 }
 
-.outer-box{
-  /* margin-left: 1rem;
-  margin-right: 1rem; */
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .class-name{
   padding-left: 10px;
   font-style: italic;
@@ -45,4 +38,10 @@
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 20px;
+}
+
+@media screen and (max-width: 576px) {
+  .content {
+    font-size:small;
+  }
 }
