--- a/src/components/Homebrewed/Races/Races.css
+++ b/src/components/Homebrewed/Races/Races.css
@@ -8,7 +8,7 @@
 .outer-box{
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-top: 1rem;
+    margin-top: 1vw;
     margin-bottom: 1rem;
 }
 
