--- a/src/components/Homebrewed/Races/Races.css
+++ b/src/components/Homebrewed/Races/Races.css
@@ -18,17 +18,11 @@
     text-decoration: underline;
 }
 
-.race-box {
+/* .race-box {
     padding-top: 1rem;
-    padding-bottom: 5rem;
-    padding-left: 2rem;
+    -bottom: 5rem;
+    -left: 2rem;
     padding-right: 2rem;
     background-color: white;
     border-radius: 10px;
-}
-
-.content {
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 20px;
-}
+} */
