--- a/src/components/SessionSummaries/SessionSummaries.css
+++ b/src/components/SessionSummaries/SessionSummaries.css
@@ -1,8 +1,5 @@
 .SessionSummaries {
     margin-top: 80px;
-}
-
-.title{
-    margin-left: 15px;
-    margin-bottom: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
