--- a/src/components/PlayerBios/PlayerBios.css
+++ b/src/components/PlayerBios/PlayerBios.css
@@ -4,12 +4,7 @@
     margin-right: 20px;
 }
 
-.title{
-    margin-left: 15px;
-    margin-bottom: 15px;
-}
-
-.bio-card{
+.preview-card{
     margin-bottom: 30px;
 }
 
@@ -51,4 +46,8 @@
 
 .entry {
     font-size: small;
+}
+
+.blurb{
+    margin-top: -15px;
 }
