--- a/src/components/Homebrewed/Classes/Classes.css
+++ b/src/components/Homebrewed/Classes/Classes.css
@@ -1,10 +1,4 @@
-.Kaleido {
-    margin-top: 80px;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.class-name{
+.page-title{
     padding-left: 10px;
     font-style: italic;
     text-decoration: underline;
