--- a/src/components/CharacterSheets/CharacterSheets.css
+++ b/src/components/CharacterSheets/CharacterSheets.css
@@ -8,14 +8,14 @@
     object-fit: contain;
 }
 
-.rarri-preview{
+/* .rarri-preview{
     height: 300px;
     object-fit: cover;
     object-position: 0px -25px;
-}
+} */
 
-.preview-img{
+/* .preview-img{
     height: 300px;
     object-fit: cover;
     object-position: top;
-}
+} */
