--- a/src/components/Homebrewed/Races/Races.css
+++ b/src/components/Homebrewed/Races/Races.css
@@ -3,13 +3,13 @@
     margin-left: 20px;
     margin-right: 20px;
 }
-
+/* 
 .outer-box{
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 1vw;
     margin-bottom: 1rem;
-}
+} */
 
 .race-name{
     padding-left: 10px;
