--- a/src/components/PlayerBios/PlayerBios.css
+++ b/src/components/PlayerBios/PlayerBios.css
@@ -1,7 +1,7 @@
 .preview-card{
     margin-bottom: 30px;
 }
-
+/* 
 .anna-pp{
     height: 300px;
     object-fit: cover;
@@ -36,7 +36,7 @@
     height: 300px;
     object-fit: cover;
     object-position: 0px -90px;
-}
+} */
 
 .entry {
     font-size: small;
