--- a/src/App.css
+++ b/src/App.css
@@ -30,16 +30,16 @@
 .home-box {
   padding-top: 3.5rem;
   padding-bottom: 5rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
   /* background-color: white; */
 }
 
 .card-box {
   padding-top: 1rem;
   padding-bottom: 5rem;
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .outer-box{
@@ -62,6 +62,18 @@
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 20px;
+}
+
+.preview-card{
+  margin-bottom: 30px;
+}
+
+.entry {
+  font-size: small;
+}
+
+.blurb{
+  margin-top: -15px;
 }
 
 @media screen and (max-width: 576px) {
