--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -10,28 +10,28 @@
     font-size: large;
 }
 
-/* .carousel {
-height: 100px;
-} */
+.carousel {
+    height: 40em;
+}
 
 .carousel-img {
     height: 40rem;
-    /* margin-left: 25rem;
-    margin-right: 20rem;
-    margin-top: 5rem; */
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
     .main {
         font-size: x-small;
     } 
     .sub{
         font-size: xx-small;
     }
-    .carousel-box {
-        padding: 5px;
+    .carousel{
+        height: 5rem;
     }
-  }
+    .carousel-img {
+        height: 5rem;
+    }
+} */
 
 /* @media (max-width: 600px) {
     .main {
@@ -40,8 +40,11 @@ height: 100px;
     .sub{
         font-size: x-small;
     }
-    .carousel-box {
-        padding: 10px;
+    .carousel{
+        height: 15rem;
+    }
+    .carousel-img {
+        height: 15rem;
     }
   } */
 
@@ -52,16 +55,25 @@ height: 100px;
     .sub{
         font-size: small;
     }
-    .carousel-box {
-        padding: 10px;
+    .carousel{
+        height: 20rem;
+    }
+    .carousel-img {
+        height: 20rem;
     }
 }
-
-/* @media (max-width: 1280px) {
+/* 
+@media (mid-width: 800px) and (max-width: 1280px) {
     .main {
         font-size: large;
     } 
     .sub{
         font-size: medium;
+    }
+    .carousel{
+        height: 30rem;
+    }
+    .carousel-img {
+        height: 30rem;
     }
 } */
