--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,14 +11,14 @@
 }
 
 .carousel {
-    height: 40em;
+    height: 50em;
 }
 
 .carousel-img {
-    height: 40rem;
+    height: 50rem;
 }
 
-/* @media (max-width: 480px) {
+@media (max-width: 480px) {
     .main {
         font-size: x-small;
     } 
@@ -26,14 +26,14 @@
         font-size: xx-small;
     }
     .carousel{
-        height: 5rem;
+        height: 10rem;
     }
     .carousel-img {
-        height: 5rem;
+        height: 10rem;
     }
-} */
+}
 
-/* @media (max-width: 600px) {
+@media (min-width: 480px) and (max-width: 600px) {
     .main {
         font-size: small;
     } 
@@ -41,14 +41,14 @@
         font-size: x-small;
     }
     .carousel{
-        height: 15rem;
+        height: 20rem;
     }
     .carousel-img {
-        height: 15rem;
+        height: 20rem;
     }
-  } */
+  }
 
-@media (max-width: 800px) {
+@media (min-width: 600px) and (max-width: 800px) {
     .main {
         font-size: medium;
     } 
@@ -56,14 +56,14 @@
         font-size: small;
     }
     .carousel{
-        height: 20rem;
+        height: 30rem;
     }
     .carousel-img {
-        height: 20rem;
+        height: 30rem;
     }
 }
-/* 
-@media (mid-width: 800px) and (max-width: 1280px) {
+
+@media (min-width: 800px) and (max-width: 1280px) {
     .main {
         font-size: large;
     } 
@@ -71,9 +71,9 @@
         font-size: medium;
     }
     .carousel{
-        height: 30rem;
+        height: 40rem;
     }
     .carousel-img {
-        height: 30rem;
+        height: 40rem;
     }
-} */
+}
